# ALC

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  todo.md
src/backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
src/backend/alembic/: env.py
src/backend/alembic/versions/: 3602b506bc61_initial_schema.py  a1b2c3d4e5f6_add_multi_tenancy_schema.py  b7c8d9e0f1a2_add_setup_status_table.py  c8d9e0f1a2b3_add_is_demo_data_column.py  d1e2f3a4b5c6_add_refresh_tokens_table.py  e2f3a4b5c6d7_add_template_versioning.py  (+1 more)
src/backend/scripts/: bulk_upload.py  ensure_tables.py
src/backend/tests/: conftest.py  test_agent_registry.py  test_audit_middleware.py  test_audit_mixin.py  test_audit_service.py  test_auth_endpoints.py  test_auth_service.py  test_company_api.py  test_compare_endpoint.py  test_config.py  test_database.py  test_document_generator.py  test_document_reviewer.py  test_document_service.py  test_field_validator.py  test_integration_audit_trail.py  test_integration_csv_isolation.py  test_integration_document_lifecycle.py  test_integration_document_review.py  test_integration_pdf_workflow.py  test_integration_training_gate.py  test_integration_workflow_lifecycle.py  test_knowledge_service.py  test_model_manager.py  test_ocr_engine.py  test_pdf_generator.py  test_pdf_roundtrip.py  test_rag_pipeline.py  test_report_validation.py  test_reports_api.py  test_signature_service.py  test_template_service.py  test_training_content_generator.py  test_training_service.py  test_uuid_service.py  test_virtual_folders.py  test_workflow_api.py  test_workflow_engine.py
(+359 files in other folders)
